Ensure text remains visible during webfont load

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -5,6 +5,7 @@
     url("/Inter-Regular.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
+  font-display: swap
 }
 
 
